<resources>
    <string name="app_name">JobFinder</string>
    <string name="description">Explore your dream jobs</string>
    <string name="create_account">Create Account</string>
    <string name="name">Name</string>
    <string name="email">Email</string>
    <string name="password">Password</string>
    <string name="terms_and_condition">I agree with our<font color='#3230bf'> Terms </font> and <font color='#3230bf'> Condition </font> </string>
    <string name="have_account">Already have an account?<font color='#3230bf'> Sign In </font></string>
    <string name="Welcome_sentence">Hello,You can start using the application after sign up </string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="action_sign_in_short">Sign in</string>

</resources>