<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".LoginActivity"
    tools:ignore="ExtraText">


    <ImageView
        android:id="@+id/logo"
        android:layout_width="56dp"
        android:layout_height="56dp"
        android:layout_marginTop="40dp"
        android:src="@drawable/image"
        app:layout_constraintBottom_toTopOf="@+id/Welcome_sentence"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_goneMarginEnd="16dp"
        app:layout_goneMarginTop="16dp"
        tools:ignore="MissingConstraints"
        />

    <TextView
        android:id="@+id/createAccount"
        android:layout_width="400dp"
        android:layout_height="wrap_content"

        android:layout_marginBottom="429dp"
        android:textAlignment="center"
        android:text="@string/create_account"
        android:textColor="@color/black"
        android:textSize="38sp"

        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/logo"/>





    <TextView
        android:id="@+id/Welcome_sentence"
        android:layout_width="400dp"
        android:layout_height="wrap_content"
        android:textAlignment="center"
        android:text="@string/Welcome_sentence"
        android:textColor="@color/grey"
        android:textSize="20sp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/createAccount" />

    <EditText
        android:id="@+id/name"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/name"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/Welcome_sentence"
        android:textColor="@color/grey"
        android:paddingStart="20dp"
        android:inputType="text"
        android:background="@color/white" />


    <EditText
        android:id="@+id/email"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/email"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/name"
        android:textColor="@color/grey"
        android:paddingStart="20dp"
        android:inputType="text"
        android:background="@color/white" />


    <EditText
        android:id="@+id/password"
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:hint="@string/password"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/email"
        android:textColor="@color/grey"
        android:paddingStart="20dp"
        android:inputType="text"
        android:background="@color/white" />


    <CheckBox
        android:id="@+id/checkbox"
        android:layout_width="20dp"
        android:layout_height="20dp"
        app:layout_constraintTop_toBottomOf="@+id/password"
        app:layout_constraintEnd_toStartOf="@id/acceptTerms"
        android:layout_marginRight="7dp"
        android:buttonTint="@color/blue"
        android:checked="false" />

    <TextView
        android:id="@+id/acceptTerms"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="70dp"
        android:text="@string/terms_and_condition"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/password" />

    <Button
        android:id="@+id/create_account_button"
        android:layout_width="300dp"
        android:layout_height="60dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/acceptTerms"
        app:layout_constraintStart_toStartOf="parent"
        android:textSize="15sp"
        android:text="@string/create_account"
        android:textAlignment="center"
        android:textColor="@color/white"
        app:cornerRadius="12dp"
        android:layout_margin="30dp"
        android:enabled="false" />



    <TextView
        android:id="@+id/have_account_question"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="800dp"
        android:text="@string/have_account"
        android:textColor="@color/grey"
        android:textSize="15sp"
        android:layout_marginStart="50dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/create_account_button"
        app:layout_constraintStart_toStartOf="parent"
        android:layout_margin="20dp"
        android:textAlignment="center"/>


</androidx.constraintlayout.widget.ConstraintLayout>